<resources>
    <string name="app_name">KZNH</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_kznh">KZNH</string>
    <string name="action_pielgrzym_kazania">Kazania</string>
    <string name="action_pielgrzym_en">Piosenki angielskie</string>
    <string name="action_pielgrzym_pl">Piosenki polskie</string>
    <string name="kznh_url">http://sc.4stream.pl:18772</string>
    <string name="polskie_url">http://shoutcast.com.pl:9444</string>
    <string name="angielskie_url">http://shoutcast.com.pl:9448</string>
    <string name="kazania_url">http://radiointernetowe.net:9450</string>
    <string name="error_unknown">Wystąpił nieoczekiwany błąd.</string>
    <string name="search">Szukaj...</string>
    <string name="volume">Głośność:</string>
    <string name="warning">Uwaga!</string>
    <string name="stop_player_question">Czy chcesz zakończyć odtwarzanie?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="close_current_player">Najpierw wyłącz dotychczasowy odtwarzacz.</string>
    <string name="action_close">Wyjdź</string>
    <string name="choose_radio_uppercase">WYBIERZ RADIO</string>
    <string name="choose_radio">Wybierz radio</string>
    <string name="facebook">FACEBOOK</string>
    <string name="kznhpl">KZNH.PL</string>
    <string name="app_title">KOŚCIÓŁ ZIELONOŚWIĄTKOWY \n NOWA HUTA</string>
    <string name="go_to_preferences">ustawienia</string>
    <string name="understood">rozumiem</string>
    <string name="internet_usage_warning">Twój operator może naliczyć dodatkowe koszty za połączenie z internetem. Jeżeli to możliwe połącz się przez wifi.</string>
    <string name="dont_show">Nie pokazuj tego więcej</string>
    <string name="no_internet">Nie masz połączenia z internetem.</string>
    <string name="press_back_again">Wciśnij wstecz jeszcze raz, aby wyjść z aplikacji.</string>
    <string name="exit">Zakończ</string>
    <string name="only_sunday">Ta stacja nadaje zazwyczaj w niedziele od 10:00.</string>
    <string name="read">CZYTAJ</string>
    <string name="fragments_for_today">Fragmenty na dziś</string>
    <string name="install_mysword">Ta funkcja najlepiej działa z aplikacją MySword, czy chcesz ją zainstalować?</string>
    <string name="progress">POSTĘP</string>
    <string name="loading">Trwa ładowanie...</string>
    <string name="error_code">Kod błędu:</string>

    <string name="title_section1">KZNH</string>
    <string name="title_section2">Kalendarz</string>
    <string name="title_section3">Radio</string>
    <string name="title_section4">Nagrania</string>
    <string name="title_section5">Plan czytania Biblii</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="choose_year">Wybierz rok</string>
    <string name="choose_speaker">Wybierz mówcę</string>
    <string name="all_speakers">Wszyscy</string>
    <string name="all_years">Wszystkie</string>

    <string name="action_settings">Settings</string>
    <string name="back">Wróć</string>

    <string-array name="radio_names_array">
        <item>Radio KZNH</item>
        <item>Kazania</item>
        <item>Piosenki angielskie</item>
        <item>Piosenki polskie</item>
    </string-array>
    <string-array name="radio_url_array">
        <item>http://sc.4stream.pl:18772</item>
        <item>http://radiointernetowe.net:9450</item>
        <item>http://shoutcast.com.pl:9448</item>
        <item>http://shoutcast.com.pl:9444</item>
    </string-array>

    <string-array name="radio_owners_array">
        <item>KZNH</item>
        <item>Radio pielgrzym</item>
        <item>Radio pielgrzym</item>
        <item>Radio pielgrzym</item>
    </string-array>

    <string-array name="months_array">
        <item>styczeń</item>
        <item>luty</item>
        <item>marzec</item>
        <item>kwiecień</item>
        <item>maj</item>
        <item>czerwiec</item>
        <item>lipiec</item>
        <item>sierpień</item>
        <item>wrzesień</item>
        <item>październik</item>
        <item>listopad</item>
        <item>grudzień</item>
    </string-array>
    <string name="title_activity_media_player">Odtwarzacz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
