<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="@dimen/activity_horizontal_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/titleView"
        android:layout_alignParentTop="true">
            <ImageView
                android:layout_width="@dimen/home_fragment_logo_dimen"
                android:layout_height="@dimen/home_fragment_logo_dimen"
                android:background="@drawable/menu_item_icon_background"
                android:layout_gravity="center"
                android:src="@drawable/kznh_large"
                android:padding="@dimen/home_fragment_logo_padding" />
    </FrameLayout>


    <TextView
        android:id="@id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primary"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/app_title"
        android:layout_marginTop="@dimen/home_fragment_title_margin" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/facebookButton"
            android:layout_width="@dimen/home_fragment_button_width"
            android:layout_height="@dimen/home_fragment_button_height"
            android:background="@drawable/social_button"
            android:layout_marginTop="@dimen/home_fragment_buttons_margin"
            android:text="@string/facebook"
            android:textColor="@color/default_light"/>

        <Button
            android:id="@+id/kznhplButton"
            android:layout_width="@dimen/home_fragment_button_width"
            android:layout_height="@dimen/home_fragment_button_height"
            android:background="@drawable/social_button"
            android:layout_marginTop="@dimen/home_fragment_buttons_margin"
            android:text="@string/kznhpl"
            android:textColor="@color/default_light"
            />
    </LinearLayout>

</RelativeLayout>